--- a/files/en-us/mozilla/firefox/releases/93/index.html
+++ b/files/en-us/mozilla/firefox/releases/93/index.html
@@ -9,11 +9,9 @@ tags:
 ---
 <p>{{FirefoxSidebar}}{{draft}}</p>
 
-<p class="summary">This article provides information about the changes in Firefox 93 that will affect developers. Firefox 93 is the current <a href="https://www.mozilla.org/en-US/firefox/channel/desktop/#beta">Beta version of Firefox</a>, and will ship on <a href="https://wiki.mozilla.org/RapidRelease/Calendar#Future_branch_dates">October 5, 2021</a>.</p>
+<p class="summary">This article provides information about the changes in Firefox 93 that will affect developers. Firefox 93 was released on October 5, 2021</a>.</p>
 
 <h2 id="Changes_for_web_developers">Changes for web developers</h2>
-
-<h3 id="Developer_Tools">Developer Tools</h3>
 
 <h3 id="HTML">HTML</h3>
 
@@ -22,25 +20,19 @@ tags:
   <li>The UI for <a href="/docs/Web/HTML/Element/input/datetime-local"><code>&lt;input type="datetime-local"&gt;</code></a> has been implemented. ({{bug(1283388)}}).</li>
 </ul>
 
-<h4 id="removals_html">Removals</h4>
-
 <h3 id="CSS">CSS</h3>
 
 <ul>
-  <li>The keywords <code>small-caps</code> keyword is now supported for the {{cssxref("font-synthesis")}} property ({{bug(1706080)}}).</li>
+  <li>The <code>small-caps</code> keyword is now supported for the {{cssxref("font-synthesis")}} property ({{bug(1706080)}}).</li>
 </ul>
-
-<h4 id="removals_css">Removals</h4>
 
 <h3 id="JavaScript">JavaScript</h3>
 
 <ul>
+  <li><a href="/en-US/docs/Web/JavaScript/Reference/Classes/Class_static_initialization_blocks">Class <code>static</code> initialization blocks</a> are now supported, allowing more flexible initialization of {{jsxref("Classes/static", "static")}} properties ({{bug(1725689)}}).</li>
   <li>The properties <code>imageOrientation</code> and <code>premultiplyAlpha</code> can be passed to the method {{domxref("createImageBitmap()")}} using the <code>options</code> object ({{bug(1367251)}}).</li>
   <li>{{jsxref("Intl.supportedValuesOf()")}} is now supported, allowing code to enumerate values supported by an implementation, This might be used, for example, to download a polyfill for just the missing category of values ({{bug(1670033)}}).</li>
-  <li><a href="/en-US/docs/Web/JavaScript/Reference/Classes/Class_static_initialization_blocks">Class <code>static</code> initialization blocks</a> are now supported, allowing more flexible initialization of {{jsxref("Classes/static", "static")}} properties ({{bug(1725689)}}).</li>
 </ul>
-
-<h4 id="removals_js">Removals</h4>
 
 <h3 id="HTTP">HTTP</h3>
 
@@ -48,12 +40,6 @@ tags:
   <li>The SHA-256 algorithm is now supported for <a href="/en-US/docs/Web/HTTP/Authentication">HTTP Authentication</a> using digests. This allows much more secure authentication than previously available using the MD5 algorithm ({{bug(1682995)}}).</li>
   <li>The default HTTP {{HTTPHeader("ACCEPT")}} header for <em>images</em> changed to: <code>image/avif,image/webp,*/*</code> (following addition of support for the <a href="/en-US/docs/Web/Media/Formats/Image_types#avif">AVIF</a> image format). ({{bug(1682995)}}).</li>
 </ul>
-
-<h4 id="removals_http">Removals</h4>
-
-<h3 id="Security">Security</h3>
-
-<h4 id="removals_sec">Removals</h4>
 
 <h3 id="APIs">APIs</h3>
 
@@ -63,26 +49,22 @@ tags:
   <li>The {{domxref("reportError()")}} global function is now supported, allowing scripts to report errors to the console or global event handlers, emulating an uncaught JavaScript exception ({{bug(1722448)}}).</li>
 </ul>
 
-<h4 id="DOM">DOM</h4>
-
-<li>The {{domxref("GlobalEventHandlers.onsecuritypolicyviolation","onsecuritypolicyviolation")}} global event handler property is now supported.
-  This can be used to assign a handler for processing <a href="/en-US/docs/Web/API/Element/securitypolicyviolation_event"><code>securitypolicyviolation</code></a> events fired when there is a <a href="/en-US/docs/Web/HTTP/CSP">Content Security Policy</a> violation ({{bug(1727302)}}).</li>
-<li>The <code>onslotchange</code> event handler property is now supported on {{domxref("GlobalEventHandlers.onslotchange","GlobalEventHandlers")}} and {{domxref("ShadowRoot.onslotchange","ShadowRoot")}} is now supported.
-  This can be used to assign a handler for processing <a href="/en-US/docs/Web/API/HTMLSlotElement/slotchange_event"><code>slotchange</code></a> events, which are fired on {{HTMLElement("slot")}} elements when the node(s) contained in the slot change ({{bug(1501983)}}).</li>
-
-<h4 id="Media_WebRTC_and_Web_Audio">Media, WebRTC, and Web Audio</h4>
-
 <h4 id="Events">Events</h4>
+
+<ul>
+  <li>The {{domxref("GlobalEventHandlers.onsecuritypolicyviolation","onsecuritypolicyviolation")}} global event handler property is now supported.
+  This can be used to assign a handler for processing <a href="/en-US/docs/Web/API/Element/securitypolicyviolation_event"><code>securitypolicyviolation</code></a> events fired when there is a <a href="/en-US/docs/Web/HTTP/CSP">Content Security Policy</a> violation ({{bug(1727302)}}).</li>
+  <li>The <code>onslotchange</code> event handler property is now supported on {{domxref("GlobalEventHandlers.onslotchange","GlobalEventHandlers")}} and {{domxref("ShadowRoot.onslotchange","ShadowRoot")}}.
+  This can be used to assign a handler for processing <a href="/en-US/docs/Web/API/HTMLSlotElement/slotchange_event"><code>slotchange</code></a> events, which are fired on {{HTMLElement("slot")}} elements when the node(s) contained in the slot change ({{bug(1501983)}}).</li>
+</ul>
+
+<h4 id="removals">Removals</h4>
+
 <ul>
   <li>{{domxref("KeyboardEvent.initKeyEvent()")}} has been moved behind the preference <code>dom.keyboardevent.init_key_event.enabled</code> and is disabled by default.
     The method is not present in any current specification or supported in other current browsers ({{bug(1717760)}}).</li>
 </ul>
 
-<h4 id="removals_media">Removals</h4>
-
-<h3 id="WebAssembly">WebAssembly</h3>
-
-<h4 id="removals_wasm">Removals</h4>
 
 <h3 id="webdriver_conformance_marionette">WebDriver conformance (Marionette)</h3>
 
@@ -90,7 +72,6 @@ tags:
   <li>Fixed a bug which caused <code>WebDriver:Print</code> to fail for large documents ({{bug(1721982)}}).</li>
 </ul>
 
-<h4 id="removals_webdriver">Removals</h4>
 
 <h2 id="Changes_for_add-on_developers">Changes for add-on developers</h2>
 
@@ -98,9 +79,8 @@ tags:
   <li>Sidebars are now included in {{WebExtAPIRef("extension.getViews")}} when <code>windowId</code> is specified ({{bug(1612390)}}).</li>
 </ul>
 
-<h4 id="removals_webext">Removals</h4>
 
-<h3 id="Other">Other</h3>
+<h2 id="Other">Other</h2>
 
 <ul>
   <li>Support for <a href="/en-US/docs/Web/Media/Formats/Image_types#avif">AVIF</a> images is now enabled by default ({{bug(1682995)}}).
