Remove MutationObserverInit dictionary from MDN

--- a/files/en-us/mozilla/firefox/releases/61/index.html
+++ b/files/en-us/mozilla/firefox/releases/61/index.html
@@ -87,7 +87,7 @@ tags:
  <li>{{domxref("DOMTokenList.replace()")}} now returns a boolean value to indicate whether the replacement occurred successfully, rather than void ({{bug(1444909)}}).</li>
  <li>The <a href="/en-US/docs/Web/API/Fetch_API">Fetch API</a>'s {{domxref("Request.credentials")}} property now defaults to <code>"same-origin"</code> per the latest revision of the specification ({{bug(1394399)}}).</li>
  <li>The {{domxref("Request.destination")}} property has been implemented ({{bug(1402892)}}).</li>
- <li>The {{domxref("MutationObserver")}} option dictionary, {{domxref("MutationObserverInit")}}, no longer has <code>false</code> as the default value of all of its Boolean properties. Now, only <code>childList</code> and <code>subtree</code> have default values (of <code>false</code> still). The other properties have no default values ({{bug(973638)}}).</li>
+ <li>The {{domxref("MutationObserver")}} option dictionary, `MutationObserverInit`, no longer has <code>false</code> as the default value of all of its Boolean properties. Now, only <code>childList</code> and <code>subtree</code> have default values (of <code>false</code> still). The other properties have no default values ({{bug(973638)}}).</li>
  <li>The <a href="/en-US/docs/Web/API/Payment_Request_API">Payment Request API</a> method {{domxref("PaymentRequest.show()")}} now supports using a {{jsxref("Promise")}} to let the client side code provide updated payment details prior to activating the payment interface ({{bug(1441709)}}).</li>
 </ul>
 
