Remove RTCOfferAnswerOptions and RTC[Offer/Answer]Options from MDN

--- a/files/en-us/mozilla/firefox/releases/55/index.html
+++ b/files/en-us/mozilla/firefox/releases/55/index.html
@@ -203,7 +203,7 @@ tags:
  <li>The proprietary Firefox OS Device Storage API has been removed from the platform ({{bug(1299500)}}).</li>
  <li>The <code>aShowDialog</code> parameter of the non-standard {{domxref("Window.find()")}} method (which could be specified to open up a "Find" dialog in the browser) has been removed ({{bug(1348409)}}).</li>
  <li>The <code>HTMLFormElement.requestAutoComplete()</code> method has been removed (see {{domxref("HTMLFormElement")}}) ({{bug(1270740)}}).</li>
- <li>The non-standard, Mozilla-specific, WebRTC offer options <code>mozDontOfferDataChannel</code> and <code>mozBundleOnly</code> have been removed from the <code><a href="/en-US/docs/Web/API/RTCPeerConnection/createOffer#rtcofferoptions_dictionary">RTCOfferOptions</a></code> dictionary and are no longer supported by {{domxref("RTCPeerConnection.createOffer()")}} ({{bug(1196974)}}).</li>
+ <li>The non-standard, Mozilla-specific, WebRTC offer options <code>mozDontOfferDataChannel</code> and <code>mozBundleOnly</code> have been removed from the <code>RTCOfferOptions</code> dictionary and are no longer supported by {{domxref("RTCPeerConnection.createOffer()")}} ({{bug(1196974)}}).</li>
  <li>Support for the proprietary Firefox OS <a href="/en-US/docs/Archive/B2G_OS/API/Audio_Channels_API">Audio Channels API</a> has been removed from {{domxref("HTMLMediaElement")}} and {{domxref("AudioContext")}} ({{bug(1358061)}}).</li>
 </ul>
 
