--- a/files/en-us/mozilla/firefox/releases/42/index.html
+++ b/files/en-us/mozilla/firefox/releases/42/index.html
@@ -110,8 +110,8 @@ install Firefox Developer Edition</a> Firefox 42 was released on November 3, 201
 <h4 id="WebRTC">WebRTC</h4>
 
 <ul>
- <li>The {{domxref("RTCPeerConnection.createOffer()")}}'s options data type, {{domxref("RTCOfferOptions")}}, has been updated to more closely match the specification. Among other changes, it is now based upon the {{domxref("RTCOfferAnswerOptions")}} dictionary, which provides the {{domxref("RTCOfferAnswerOptions.voiceActivityDetection", "voiceActivityDetection")}} option.</li>
- <li>The {{domxref("RTCAnswerOptions")}} dictionary has been added. This is the type used for the <code>options</code> parameter to {{DOMxRef("RTCPeerConnection.createAnswer", "createAnswer()")}}.</li>
+ <li>The {{domxref("RTCPeerConnection.createOffer()")}}'s options data type, <code>RTCOfferOptions</code>, has been updated to more closely match the specification. Among other changes, it is now based upon the <code>RTCOfferAnswerOptions</code> dictionary, which provides the <code>voiceActivityDetection</code> option.</li>
+ <li>The <code>RTCAnswerOptions</code> dictionary has been added. This is the type used for the <code>options</code> parameter to {{DOMxRef("RTCPeerConnection.createAnswer", "createAnswer()")}}.</li>
  <li>The <code>RTCICECandidatePairStats.mozPriority</code> has been renamed to {{domxref('RTCICECandidatePairStats.priority')}} ({{bug(1184426)}}).</li>
 </ul>
 
