--- a/files/en-us/mozilla/firefox/releases/44/index.html
+++ b/files/en-us/mozilla/firefox/releases/44/index.html
@@ -183,7 +183,7 @@ tags:
  <li>The attribute {{domxref("RTCPeerConnection.canTrickleIceCandidates")}} has been added, the non-standard method {{domxref("RTCPeerConnection.updateIce()")}} removed ({{bug(1209744)}}).</li>
  <li>The {{domxref("MediaStream")}} interface now supports the {{domxref("MediaStream.addTrack()")}} and {{domxref("MediaStream.removeTrack()")}} methods ({{bug(1103188)}}).</li>
  <li>The constructor {{domxref("MediaStream.MediaStream", "MediaStream()")}} has been implemented ({{bug(1070216)}}).</li>
- <li>Support for the non-standard constraint style option list for {{domxref("RTCOfferOptions")}} has been removed.</li>
+ <li>Support for the non-standard constraint style option list for <code>RTCOfferOptions</code> has been removed.</li>
 </ul>
 
 <h4 id="New_APIs_2">New APIs</h4>
